fixed scrollbar problem + resizing

--- a/quillink/src/App.css
+++ b/quillink/src/App.css
@@ -1,3 +1,13 @@
+html {
+  overflow: hidden;
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  overflow: auto;
+}
+
 .App {
   text-align: center;
 }
