--- a/quillink/src/components/css/Notifications.css
+++ b/quillink/src/components/css/Notifications.css
@@ -1,14 +1,33 @@
 #notif-bar {
     flex-grow: 1;
+    display: flex;
     justify-self: right;
-    width: 300px;
     height: 100vh;
     padding-top: 20px;
     padding-bottom: 20px;
+    width: 350px;
+    max-width: 100%;
+    position: relative;
+}
+
+#inner-notif {
+    display: flex;
+    position: fixed;
+    justify-content: flex-start;
+    width: 285px;
+    height: 97%;
+}
+
+@media only screen and (max-width: 1000px) {
+    #notif-bar {
+        display: none;
+    }
 }
 
 #notification-center {
-    height: 100%;
+    height: 98%;
+    margin-left: 16px;
+    margin-bottom: 20px;
 }
 
 .notification {
