--- a/quillink/src/pages/css/Projects.css
+++ b/quillink/src/pages/css/Projects.css
@@ -1,14 +1,10 @@
 #projects {
     width: 100%;
     flex-basis: 0;
-    flex-grow: 999;
-    height: 100vh;
-    overflow-y: scroll;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
-#projects::-webkit-scrollbar {
-    display: none;
+    flex-grow: 99;
+    border-left: 1px solid#DFDFDF;
+    border-right: 1px solid #DFDFDF;
+    /*overflow-y: scroll;*/
 }
 
 #project-list {
